--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: 21stdigital/nginx-php
+    image: 21stdigital/nginx-php:develop
     ports:
       - 80:80
-    volumes:
-      - ./php/wordpress.dev.ini:/etc/php/7.2/mods-available/wordpress.ini
-      - ./xdebug/xdebug.dev.ini:/etc/php/7.2/mods-available/xdebug.ini
-      - ./php/wordpress.dev.conf:/etc/php/7.2/fpm/pool.d/wordpress.conf
